syntax = "proto3";

package org.example;
option java_generic_services = true;
option java_multiple_files = true;


message Salary {
  int64 id = 1;
  string numberAVS = 2;
  string name = 3;
  string firstName = 4;
  string dateDebut = 5; // Represent LocalDate as a string for simplicity
  string dateFinished = 6; // Represent LocalDate as a string for simplicity
  float numberAvsAiApg = 7;
  float numberAc = 8;
  float numberAf = 9;
}